# python-project-83

./: .gitignore  README.md  database.sql  makefile  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  logger.py  manage_db.py  parse_url.py
page_analyzer/templates/: checks.html  index.html  urls.html
tests/: test_app.py
