[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Pavel Belyavskiy <prostopasha@gmail.com>"]
readme = "README.md"
packages = [{include = "python-project-83"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app:main"
